<resources>
    <string name="app_name">AndroidAcademyHomeWork</string>
    <string name="name_movie">Avengers: \nEnd Game</string>
    <string name="name_movie_l">Avengers: End Game</string>
    <string name="age_limit">13+</string>
    <string name="movie_genre">Action, Adventure, Fantasy</string>
    <string name="reviews">125 Reviews</string>
    <string name="story_name">Storyline</string>
    <string name="after_the_d">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="robert_downey">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="cast">Cast</string>
    <string name="back">Back</string>
    <string name="movies_list">Movies list</string>
    <string name="_127_min">127 min</string>

</resources>