<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.MovieDetailsFragment">

        <ImageView
            android:id="@+id/imageViewDetailFragmentTitleBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/title_background_image_mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_44"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_path"
            android:gravity="center"
            android:text="@string/back"
            android:textAppearance="@style/button_back"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDetailFragmentAgeLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_24"
            android:alpha="0.9"
            android:background="@drawable/ic_rectangle"
            android:gravity="center"
            tools:text="@string/age_limit"
            android:textAppearance="@style/age_limit"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toTopOf="@+id/textViewDetailFragmentNameMove"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewDetailFragmentNameMove"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/sp_3"
            android:shadowColor="@android:color/black"
            android:shadowDy="10"
            tools:text="@string/name_movie"
            android:textAppearance="@style/title_movie_name"
            android:textSize="@dimen/sp_40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewDetailFragmentTitleBackground" />

        <TextView
            android:id="@+id/textViewDetailFragmentMovieGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/sp_4"
            android:text="@string/movie_genre"
            android:textAppearance="@style/movie_genre"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDetailFragmentNameMove" />

        <RatingBar
            android:id="@+id/ratingBarDetailsFragment"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:numStars="5"
            android:progress="1"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/red"
            android:rating="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDetailFragmentMovieGenre" />

        <TextView
            android:id="@+id/textViewDetailFragmentReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/sp_4"
            android:shadowColor="@android:color/black"
            android:shadowDy="8"
            tools:text="@string/reviews"
            android:textAppearance="@style/reviews"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toEndOf="@+id/ratingBarDetailsFragment"
            app:layout_constraintBottom_toBottomOf="@id/ratingBarDetailsFragment"
            app:layout_constraintTop_toTopOf="@+id/ratingBarDetailsFragment"/>

        <TextView
            android:id="@+id/textViewDetailFragmentStoryLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_16"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/sp_4"
            android:text="@string/story_name"
            android:textAppearance="@style/story_name"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBarDetailsFragment" />

        <TextView
            android:id="@+id/textViewDetailFragmentStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_16"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/sp_4"
            android:textAppearance="@style/after_the_d"
            android:textSize="@dimen/sp_14"
            tools:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDetailFragmentStoryLine" />

        <TextView
            android:id="@+id/textViewDetailFragmentCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_16"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/sp_8"
            android:text="@string/cast"
            android:textAppearance="@style/cast"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDetailFragmentStory" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerForActors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDetailFragmentCast" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

